<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    tools:context="ba.etf.rma23.projekat.GameDetailActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/detailsParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/item_title_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                />

            <ImageView
                android:id="@+id/cover_imageview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="clip_horizontal"
                android:layout_marginStart="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"


                 />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/release_date_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintEnd_toStartOf="@+id/genre_textview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraint0"
                />

            <TextView
                android:id="@+id/genre_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintStart_toEndOf="@+id/release_date_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraint0"
                />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/esrb_rating_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintTop_toTopOf="@+id/constraint1"
                app:layout_constraintEnd_toStartOf="@+id/platform_textview"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/platform_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintTop_toTopOf="@+id/constraint1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/esrb_rating_textview"
                 />

            </androidx.constraintlayout.widget.ConstraintLayout>




            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/developer_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintTop_toTopOf="@+id/constraint2"
                app:layout_constraintEnd_toStartOf="@+id/publisher_textview"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/publisher_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintTop_toTopOf="@+id/constraint2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/developer_textview"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/description_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toTopOf="@+id/comments_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraint2" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comments_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scrollView"
                android:paddingBottom="30dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/delete"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="Save"
                    />
                <Button
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/save"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="Delete"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>




        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>