...
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="search_query_edittext, search_button"
       />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/game_list"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="16dp"
...
